--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "name": "Counterscale",
   "namespace": "counterscale",
   "description": "A managed component for sending analytics data to Counterscale",
-  "icon": "assets/icon.svg",
-  "permissions": {}
+  "icon": "assets/counterscale-logo-300x300.webp",
+  "permissions": {
+    "access_client_kv": {
+      "description": "Provides permission to set last visited time in client KV",
+      "required": true
+    }
+  }
 }
