--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   test:
+    name: Lint the managed component
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +23,9 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
+      working-directory: ./mc
       run: npm ci
 
     - name: Run lint
+      working-directory: ./mc
       run: npm run lint
