Update deployment docs and action

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,6 +38,8 @@ jobs:
       working-directory: ./worker
       run: npm ci
 
-    - name: Deploy Worker
-      working-directory: ./worker
-      run: npm run deploy
+    - name: Build & Deploy Worker
+      uses: cloudflare/wrangler-action@v3
+      with:
+        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
