--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,3 +43,4 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        workingDirectory: ./worker
