--- a/mc/package.json
+++ b/mc/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240129.0",
     "@managed-components/types": "^1.3.8",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "esbuild": "^0.20.0",
