--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   worker-lint:
     name: Lint the managed component
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
 
     steps:
     - name: Checkout code
@@ -34,7 +34,7 @@ jobs:
   mc-test:
     name: Run Tests for managed component
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
 
     steps:
     - name: Checkout code
@@ -52,3 +52,25 @@ jobs:
     - name: Run tests
       working-directory: ./mc
       run: npm test
+
+  test-build:
+    name: Test Build for managed component
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Install dependencies for mc
+      working-directory: ./mc
+      run: npm ci
+
+    - name: Build
+      working-directory: ./mc
+      run: npm run build
