--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,18 @@ updates:
     directory: "/mc" # Location of package manifests
     schedule:
       interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
       
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/worker" # Location of package manifests
     schedule:
       interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
