--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: MC CD
 
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: ["MC CI"]
     branches: [main]
     types:
       - completed
