--- a/mc/package.json
+++ b/mc/package.json
@@ -4,8 +4,8 @@
   "description": "A managed component for sending analytics data to Counterscale",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint --ext .ts,.js, src",
-    "lint:fix": "eslint --ext .ts,.js, src --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "bundle": "node esbuild.js",
     "build": "npm run test && npm run lint && npm run typecheck && npm run bundle",
     "typecheck": "tsc --project tsconfig.build.json --noEmit",
@@ -17,11 +17,12 @@
     "managed-components",
     "counterscale"
   ],
-  "author": "",
+  "author": "mackenly",
   "license": "Apache-2.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
     "@managed-components/types": "^1.3.15",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "esbuild": "^0.23.1",
     "eslint": "^9.10.0",
